<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
<!-- NPK Title -->
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="NPK Requirements"
    android:textSize="22sp"
    android:textStyle="bold"
    android:textColor="@android:color/black"
    android:layout_marginBottom="16dp" />

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/bg_white_rounded"
    android:layout_marginHorizontal="2dp"
    android:elevation="2dp"
    android:layout_marginBottom="16dp"
    >




    <!-- NPK Info Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Nitrogen -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_circle_white"
                android:backgroundTint="#DBEAFE"
                android:gravity="center"
                android:text="N"
                android:textStyle="bold"
                android:textColor="#3D46F0"
                android:textSize="30sp"
               />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLabelNitrogen"
                android:text="@string/nitrogen"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/tvNitrogen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 kg/ha"
                android:textSize="16sp"

                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <!-- Phosphorus -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_circle_white"
                android:backgroundTint="#F3E8FF"
                android:gravity="center"
                android:text="P"
                android:textStyle="bold"
                android:textColor="#EF36F5"
                android:textSize="30sp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLabelPhosphorus"
                android:text="@string/phosphorus"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/tvPhosphorus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60 kg/ha"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <!-- Potassium -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_circle_white"
                android:backgroundTint="#FFEDD5"
                android:gravity="center"
                android:text="K"
                android:textStyle="bold"
                android:textColor="#FF4B27"
                android:textSize="30sp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLabelPotassium"
                android:text="@string/potassium"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_marginTop="6dp" />

            <TextView
                android:id="@+id/tvPotassium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="40 kg/ha"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    <!-- Soil Type -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Soil Type"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clay loam soil with good water retention capacity"
            android:textSize="16sp"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>
